<resources>
    <string name="app_name">KitchenMate</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_find_recipe">find_recipe_activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="ingredient_list_title">Ингредиенты</string>
    <string name="howto_title">Как готовить</string>
    <string name="waytocook_title">Способ приготовления</string>
    <string name="findrecipe_menu_title">Найти рецепт</string>
    <string name="findrecipe_edittext_watermark">Введите название продукта, который вы хотите добавить.</string>
    <string name="findrecipe_buttonAdd_title">Добавить</string>
    <string name="findrecipe_buttonFind_title">Найти</string>
    <string name="search">Поиск</string>
    <string name="queryFindHint">Поиск рецепта</string>
    <string name="about">
        KitchenMate - приложение для поиска рецептов. Оно было сделано для упрощения жизни пользователя, чтобы он не думал, что ему приготовить и мог найти это в подобных приложениях.
    </string>
    <string name="author">
        Данное приложение было сделано не для коммерческого использования. Оно является дипломной работой студента 4-ого курса, группы ИП-015, Ососова Сергея Андреевича.
    </string>
    <string name="authorTitle">Автор</string>
    <string name="aboutTitle">О приложении</string>

</resources>