<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FindRecipeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarRecipe1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ingredientsListView"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredient_list_title"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingHorizontal="32dp"
                    android:paddingVertical="16dp"/>


            </LinearLayout>

        </ScrollView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:hint="@string/findrecipe_edittext_watermark"
            android:textColorHint="@color/gray"
            android:textSize="15sp"
            android:paddingHorizontal="8sp"
            android:id="@+id/ingrEditText"/>

        <Button
            android:id="@+id/addIngrButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/findrecipe_buttonAdd_title"
            android:textColor="@color/white"
            android:layout_gravity="bottom"/>

        <Button
            android:id="@+id/findRecipeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/findrecipe_buttonFind_title"
            android:textColor="@color/white"/>

    </LinearLayout>

</FrameLayout>