<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageRecipe"
                android:layout_width="match_parent"
                android:layout_height="312dp"
                android:scaleType="centerCrop"
                android:padding="40dp"/>

            <TextView
                android:id="@+id/textViewRecipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/labelIngr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:text="@string/ingredient_list_title"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/ingredient_list_title"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/labelHowTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:text="@string/waytocook_title"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewHowTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/howto_title"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
